addeded something new

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <p>Hello this is Trozans Reposetory.</p>
     <p><i>Today We are going to learn about <strong>Github</strong></i></p><br>
     <p>So stay with us , <b>Dont get distracted.</b></p>
+    <p>The thing is we always have to study to make progress</p>
+    <p>Studying is the most <b>boring</b> thing in this world, period !</p>
     
 </body>
 </html>
