--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <p>So stay with us , <b>Dont get distracted.</b></p>
     <p>The thing is we always have to study to make progress</p>
     <p>Studying is the most <b>boring</b> thing in this world, period !</p>
+
+    <p>I'm planning to buy coca-cola right now</p>
+    <p>And I'm willing to order it from <i>Chaldal</i></p>
     
 </body>
 </html>
