--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
     <p>Studying is the most <b>boring</b> thing in this world, period !</p>
 
     <p>I'm planning to buy coca-cola right now</p>
-    <p>And I'm willing to order it from <i>Chaldal</i></p>
+    <p>And I'm willing to order it from <i>Chaldal</i></p><br>
+    <p>Now I can push my code to Github.com </p>
+
+    Tom and Jerry is my favourite show from my childhood. <br>
+    <p>Here is Tom and Jerry down below : </p>
+    <img src="tom.png" alt="Picture of Tom">
+    <img src="jerry.jpg" alt="Picture of Jerry">
+
     
 </body>
 </html>
